FISH-8235 Compile on JDK 8